# zebra-testing

./: Cargo.toml  run.sh  weights.csv
overseer/: Cargo.toml
overseer-2/: Cargo.toml
overseer-2/src/: lib.rs
overseer/src/: lib.rs  runner.rs  service.rs  types.rs
simulation/: Cargo.toml
simulation/examples/: client_query.rs
src/: logging.rs  main.rs  main_old.rs  plate_task.rs  xtrem.rs
src/service/: mod.rs  types.rs
telemetry-events/src/: lib.rs  log_event.rs  order_event.rs
telemetry-server/: Cargo.toml
telemetry-server/examples/: actix.rs  something.rs
telemetry-server/src/: config.rs  main.rs  recorder.rs  utils.rs
telemetry-server/src/actors/: mod.rs
telemetry-server/src/overseer/: ingest.rs  mod.rs  task_runner.rs
telemetry-server/src/query/: args.rs  http.rs  mod.rs  responses.rs  sql.rs  utils.rs
telemetry-server/src/services/: ingest.rs  live.rs  mod.rs
telemetry-server/src/system/: mod.rs
testing/sandbox/: data.db
ts/: Cargo.toml
ts-2/: Cargo.toml
ts-2/src/: main.rs
ts/old/: ingest.rs  listeners.rs  live_stream.rs  root.rs  tcp_router.rs
ts/old/gateway/: mod.rs  tcp.rs  unix.rs
ts/old/http/: mod.rs
ts/src/: config.rs  ingest.rs  main.rs  overseer.rs  recorder.rs  router.rs  stream.rs  system.rs  types.rs
ts/src/consumer/: mod.rs  types.rs
ts/src/consumer/tasks/: mod.rs  recv_request.rs
ts/src/machines/: mod.rs
ts/src/machines/scales_s0/: mod.rs  recorder.rs  scales_s0.rs
ts/src/producer/: execute.rs  listener.rs  mod.rs  recv_data.rs  recv_port.rs  types.rs
ts/src/recorders/: mod.rs  scales_s0.rs
