[package]
name = "telemetry-server"
version = "0.1.0"
edition = "2024"

[dependencies]
telemetry-core = { path = "../telemetry-events" }

chrono="0.4.44"
duckdb={ version = "1.0.0" }

heapless={ version = "0.9.1", features = [] }

arrow="58.2.0"
httparse="1.10.1"

bytes="1.11.1"
# futures="0.3.32"

tokio={version="1.52.2", features = ["full"]}